contact from in progress fix overflow

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -8,13 +8,14 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   h1 {
     font-size: 50px;
     color: $darkColor;
     overflow: hidden;
     text-align: center;
-    margin: 30px 15px;
+    margin: 30px 15px 0px;
     @include md {
       font-size: 40px;
     }
@@ -27,10 +28,9 @@
   }
   .container {
     width: 75%;
-    height: 70%;
+    height: 60%;
     display: flex;
     align-items: flex-start;
-    margin-top: 20px;
     justify-content: center;
     margin-bottom: 20px;
     // background-color: coral;
